@@ -1,3 +1,8 @@
+2009-04-30  Alberto Garcia  <agarcia@igalia.com>
+
+	* src/controller.c (controller_run_app):
+	Don't call lastfm_ws_session_unref() on a NULL pointer
+
 2009-04-30  Javier Jardon  <javierjc1982@gmail.com>
 
 	* src/vgl-tray-icon.c (ctxt_menu_create):
